# Pyntel4004

./: .gitignore  .prospector.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pre-commit  sonar-project.properties
pyntel4004/: CHANGELOG.md  __init__.py  setup.cfg
pyntel4004/docs/: opcodes.txt  resources.pptx  useful_links.txt  ~$resources.pptm
pyntel4004/src/: 4004  4004.py  assemble  assemble.py  core.core  defaultk4004.h  example.4004.asm  example.asm  example.txt  example2.asm  example2.h  fredk4004.h  i4004.py  k4004.fred.h  k4004_busicom_rom.h  opcodes.py
pyntel4004/src/assembler/: asm_supporting.py  assemble.py  supporting.py
pyntel4004/src/disassembler/: dis_supporting.py  disassemble.py  disassembler.py
pyntel4004/src/examples/: double_4bit.asm  (+2 more)
pyntel4004/test/: .coveragerc  example.asm  pytest.ini  test_0000_characteristics.py  test_0100_initialise.py  test_0150_suboperation.py  test_0200_000_instruction_nop.py  test_0200_048_instruction_fin_x.py  test_0200_096_instruction_inc_x.py  test_0200_128_instruction_add_x.py  test_0200_240_instruction_clb.py  test_0200_241_instruction_clc.py  test_0200_242_instruction_iac.py  test_0200_243_instruction_cmc.py  test_0200_244_instruction_cma.py  test_0200_245_instruction_ral.py  test_0200_246_instruction_rar.py  test_0200_247_instruction_tcc.py  test_0200_248_instruction_dac.py  test_0200_249_instruction_tcs.py  test_0200_250_instruction_stc.py  test_0200_251_instruction_daa.py  test_0200_253_instruction_dcl.py  test_0200_instruction_nop.py  test_init.py  utils.py
(+262 files in other folders)
