[metadata]
name = Pyntel4004
version = 0.0.1-alpha.3
author = Andrew Shapton
author_email = alshapton@gmail.com
description = A Python software implementation of the Intel 4004 processor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alshapton/Pyntel4004
project_urls =
    Bug Tracker = https://github.com/alshapton/Pyntel4004/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
